[gd_scene format=3 uid="uid://c8vwe2cwmrdoh"]

[ext_resource type="Script" uid="uid://dnf6fcr0pulj2" path="res://scripts/clock.gd" id="1_nt7q6"]
[ext_resource type="Shader" uid="uid://dmm14mushcw2b" path="res://shaders/reticle.gdshader" id="1_x4jx1"]

[sub_resource type="ImageTexture" id="ImageTexture_nt7q6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xlq6p"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nt7q6"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yev5y"]
shader = ExtResource("1_x4jx1")

[sub_resource type="Gradient" id="Gradient_xlq6p"]
offsets = PackedFloat32Array(0.99115044, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nt7q6"]
gradient = SubResource("Gradient_xlq6p")
width = 50
height = 50
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_xlq6p"]

[node name="UI" type="Control" unique_id=955173854]
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="stamina" type="VSlider" parent="." unique_id=258750285]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -64.0
offset_bottom = 282.9189
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.37, 0.37)
theme_override_icons/grabber = SubResource("ImageTexture_nt7q6")
theme_override_styles/slider = SubResource("StyleBoxFlat_xlq6p")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_nt7q6")
max_value = 1.0
step = 0.0
value = 1.0

[node name="Control" type="Control" parent="." unique_id=981135388]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="reticle" type="ColorRect" parent="Control" unique_id=1817301358]
material = SubResource("ShaderMaterial_yev5y")
layout_mode = 1
offset_right = 1.75
offset_bottom = 1.75

[node name="clock" type="Control" parent="." unique_id=757002547]
layout_mode = 1
anchors_preset = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 65.0
offset_bottom = 65.0
script = ExtResource("1_nt7q6")

[node name="face" type="Sprite2D" parent="clock" unique_id=1508947]
texture = SubResource("GradientTexture2D_nt7q6")
centered = false

[node name="hour_hand" type="Sprite2D" parent="clock" unique_id=2055014934]
position = Vector2(25, 24.999998)
rotation = -1.5707964
scale = Vector2(1.09, 17.645)
texture = SubResource("PlaceholderTexture2D_xlq6p")
centered = false
offset = Vector2(-0.5, -1)

[node name="minute_hand" type="Sprite2D" parent="clock" unique_id=1607081981]
position = Vector2(25.000004, 25)
rotation = -1.5707964
scale = Vector2(1.09, 21.142496)
texture = SubResource("PlaceholderTexture2D_xlq6p")
centered = false
offset = Vector2(-0.5, -1)

[node name="hour_timer" type="Timer" parent="clock" unique_id=220820347]
wait_time = 60.0
autostart = true

[node name="min_timer" type="Timer" parent="clock" unique_id=1370423176]
autostart = true

[connection signal="timeout" from="clock/hour_timer" to="clock" method="_on_hour_timer_timeout"]
[connection signal="timeout" from="clock/hour_timer" to="clock" method="_on_timer_timeout"]
[connection signal="timeout" from="clock/min_timer" to="clock" method="_on_min_timer_timeout"]
[connection signal="timeout" from="clock/min_timer" to="clock" method="_on_timer_timeout"]
